# Web-Scraping-Project

./: .env  .gitignore  .gitmessage.txt  README.md  db.sqlite3  pyproject.toml  test.db
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
app/: auth.py  config.py  data.py  database.py  main.py
app/api/: __init__.py
app/api/v1/: bookmark.py  diary.py  notification.py  question.py  quote.py  token.py  user.py  user_question.py  users.py
app/core/: config.py  security.py
app/db/: base.py  database.py
app/models/: Bookmark(.py  Notification.py  User_questions.py  bookmark.py  bookmarks.py  diary.py  notification.py  notifications.py  question.py  quote.py  token.py  token_blacklist.py  user.py  user_question.py  user_questions.py
app/routes/: auth.py
app/schemas/: bookmark.py  diary.py  notification.py  question.py  quote.py  user_question.py
app/scraping/: quote_scraper.py
app/services/: auth_service.py
migrations/models/: 1_20250908171051_update.py  2_20250910163105_None.py
