[project]
name = "mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "aerich>=0.9.1",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "tortoise-orm>=0.25.1",
]
prod = [
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]

[tool.aerich]
tortoise_orm = "database.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
